--- a/E-Commerce/index.html
+++ b/E-Commerce/index.html
@@ -24,7 +24,7 @@
                 <li><a href="cart.html "><i class="fa fa-thin fa-light fa-bag-shopping"></i></a></li>
             </ul>
         </div>
-        <div></div>
+        <div>gfsdgjlfgksaglakjfgllghalkgkdsfglfdhsasdfkljsdkfhahsgaksgjklgh</div>
 
 
 
