--- a/E-Commerce/index.html
+++ b/E-Commerce/index.html
@@ -16,26 +16,196 @@
         <a href="#"><img src="img/logo.png" class="logo " alt=""></a>
         <div>
             <ul id="navbar">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="index.html">Shop</a></li>
-                <li><a href="index.html">Blog</a></li>
-                <li><a href="index.html">About</a></li>
-                <li><a href="index.html">Contact</a></li>
+                <li><a class="active" href="index.html">Home</a></li>
+                <li><a href="shop.html">Shop</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
                 <li><a href="cart.html "><i class="fa fa-thin fa-light fa-bag-shopping"></i></a></li>
             </ul>
-        </div>
-        <div>gfsdgjlfgksaglakjfgllghalkgkdsfglfdhsasdfkljsdkfhahsgaksgjklgh</div>
-
 
 
 
     </section>
 
 
+    <section id="hero">
+        <h4>Trade-in-offer</h4>
+        <h2>Super value deals</h2>
+        <h1>On all products</h1>
+        <p>Save more with coupons and upto 75% off!</p>
+        <button>Shop Now</button>
+    </section>
 
+    <section id="feature" class="section-p1">
+        <div class="fe-box">
+            <img src="./img/features/f1.png" alt="" srcset="">
+            <h6>Free Shipping</h6>
+        </div>
+        <div class="fe-box">
+            <img src="./img/features/f2.png" alt="" srcset="">
+            <h6>Online Order</h6>
+        </div>
+        <div class="fe-box">
+            <img src="./img/features/f3.png" alt="" srcset="">
+            <h6>Save money</h6>
+        </div>
+        <div class="fe-box">
+            <img src="./img/features/f4.png" alt="" srcset="">
+            <h6>Promotions</h6>
+        </div>
+        <div class="fe-box">
+            <img src="./img/features/f5.png" alt="" srcset="">
+            <h6>Happy Sale</h6>
+        </div>
+        <div class="fe-box">
+            <img src="./img/features/f6.png" alt="" srcset="">
+            <h6>24/7 Support</h6>
+        </div>
+    </section>
 
-
-
+    <section id="product1" class="section-p1">
+        <h2>Featured Products</h2>
+        <p>Summer collection New Modern design</p>
+        <div class="pro-container">
+            <div class="pro">
+                <img src="img/products/f1.jpg" alt="">
+                <div class="des">
+                    <span>adidas</span>
+                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h5>$78</h5>
+                </div>
+                <a href="#"><i class="fa fa-shopping-cart cart" aria-hidden="true"></i>
+                </a>
+            </div>
+            <div class="pro">
+                <img src="img/products/f2.jpg" alt="">
+                <div class="des">
+                    <span>adidas</span>
+                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h5>$78</h5>
+                </div>
+                <a href="#"><i class="fa fa-shopping-cart cart" aria-hidden="true"></i>
+                </a>
+            </div>
+            <div class="pro">
+                <img src="img/products/f3.jpg" alt="">
+                <div class="des">
+                    <span>adidas</span>
+                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h5>$78</h5>
+                </div>
+                <a href="#"><i class="fa fa-shopping-cart cart" aria-hidden="true"></i>
+                </a>
+            </div>
+            <div class="pro">
+                <img src="img/products/f4.jpg" alt="">
+                <div class="des">
+                    <span>adidas</span>
+                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h5>$78</h5>
+                </div>
+                <a href="#"><i class="fa fa-shopping-cart cart" aria-hidden="true"></i>
+                </a>
+            </div>
+            <div class="pro">
+                <img src="img/products/f5.jpg" alt="">
+                <div class="des">
+                    <span>adidas</span>
+                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h5>$78</h5>
+                </div>
+                <a href="#"><i class="fa fa-shopping-cart cart" aria-hidden="true"></i>
+                </a>
+            </div>
+            <div class="pro">
+                <img src="img/products/f6.jpg" alt="">
+                <div class="des">
+                    <span>adidas</span>
+                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h5>$78</h5>
+                </div>
+                <a href="#"><i class="fa fa-shopping-cart cart" aria-hidden="true"></i>
+                </a>
+            </div>
+            <div class="pro">
+                <img src="img/products/f7.jpg" alt="">
+                <div class="des">
+                    <span>adidas</span>
+                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h5>$78</h5>
+                </div>
+                <a href="#"><i class="fa fa-shopping-cart cart" aria-hidden="true"></i>
+                </a>
+            </div>
+            <div class="pro">
+                <img src="img/products/f8.jpg" alt="">
+                <div class="des">
+                    <span>adidas</span>
+                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h5>$78</h5>
+                </div>
+                <a href="#"><i class="fa fa-shopping-cart cart" aria-hidden="true"></i>
+                </a>
+            </div>
+        </div>
+    </section>
 
 
 
