media query done for home section

--- a/E-Commerce/index.html
+++ b/E-Commerce/index.html
@@ -21,8 +21,15 @@
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="cart.html "><i class="fa fa-thin fa-light fa-bag-shopping"></i></a></li>
+                <li><a id="lg-bag" href="cart.html "><i class="fa fa-thin fa-light fa-bag-shopping"></i></a></li>
+                <a href="#" id="close"><i class="fa fa-times" aria-hidden="true"></i>
+                </a>
             </ul>
+        </div>
+        <div id="mobile">
+            <a href="cart.html "><i class="fa fa-thin fa-light fa-bag-shopping"></i></a>
+            <i id="bar" class="fa fa-outdent" aria-hidden="true"></i>
+        </div>
     </section>
     <section id="hero">
         <h4>Trade-in-offer</h4>
