shop section extended

--- a/E-Commerce/shop.html
+++ b/E-Commerce/shop.html
@@ -16,8 +16,8 @@
         <a href="#"><img src="img/logo.png" class="logo " alt=""></a>
         <div>
             <ul id="navbar">
-                <li><a class="active" href="index.html">Home</a></li>
-                <li><a href="shop.html">Shop</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a class="active" href="shop.html">Shop</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -31,44 +31,12 @@
             <i id="bar" class="fa fa-outdent" aria-hidden="true"></i>
         </div>
     </section>
-    <section id="hero">
-        <h4>Trade-in-offer</h4>
-        <h2>Super value deals</h2>
-        <h1>On all products</h1>
-        <p>Save more with coupons and upto 75% off!</p>
-        <button>Shop Now</button>
-    </section>
-
-    <section id="feature" class="section-p1">
-        <div class="fe-box">
-            <img src="./img/features/f1.png" alt="" srcset="">
-            <h6>Free Shipping</h6>
-        </div>
-        <div class="fe-box">
-            <img src="./img/features/f2.png" alt="" srcset="">
-            <h6>Online Order</h6>
-        </div>
-        <div class="fe-box">
-            <img src="./img/features/f3.png" alt="" srcset="">
-            <h6>Save money</h6>
-        </div>
-        <div class="fe-box">
-            <img src="./img/features/f4.png" alt="" srcset="">
-            <h6>Promotions</h6>
-        </div>
-        <div class="fe-box">
-            <img src="./img/features/f5.png" alt="" srcset="">
-            <h6>Happy Sale</h6>
-        </div>
-        <div class="fe-box">
-            <img src="./img/features/f6.png" alt="" srcset="">
-            <h6>24/7 Support</h6>
-        </div>
+    <section id="page-header">
+        <h2>#stay home</h2>
+        <p>Save more with coupons & Upto 70% Off</p>
     </section>
 
     <section id="product1" class="section-p1">
-        <h2>Featured Products</h2>
-        <p>Summer collection New Modern design</p>
         <div class="pro-container">
             <div class="pro" onclick="window.location.href='sproduct.html';">
                 <img src="img/products/f1.jpg" alt="">
@@ -206,18 +174,7 @@
                 <a href="#"><i class="fa fa-shopping-cart cart" aria-hidden="true"></i>
                 </a>
             </div>
-        </div>
-    </section>
 
-    <section id="banner" class="section-m1">
-        <h4>Repair Services</h4>
-        <h2>Up to <span>70% Off</span> on All t-Shirts & Accessories</h2>
-        <button class="normal">Explore Now</button>
-    </section>
-    <section id="product1" class="section-p1">
-        <h2>New Arrivals</h2>
-        <p>Summer collection New Modern design</p>
-        <div class="pro-container">
             <div class="pro">
                 <img src="img/products/n1.jpg" alt="">
                 <div class="des">
@@ -357,34 +314,11 @@
         </div>
     </section>
 
-    <section id="sm-banner" class="section-p1">
-        <div class="banner-box">
-            <h4>crazy deals</h4>
-            <h2> buy 1 get 1 free </h2>
-            <span>The Best Classic dress is on Sale at Cara</span>
-            <button class="white">Learn More</button>
-        </div>
-        <div class="banner-box banner-box2">
-            <h4>spring summer</h4>
-            <h2> Upcoming Season </h2>
-            <span>The Best Classic dress is on Sale at Cara</span>
-            <button class="white">collection</button>
-        </div>
-    </section>
-
-    <section id="banner3" class="section-p1">
-        <div class="banner-box">
-            <h2> SEASONAL SALE</h2>
-            <h3>Winter collection -50% Off</h3>
-        </div>
-        <div class="banner-box banner-box2">
-            <h2> NEW FOOTWEAR COLLECTION </h2>
-            <h3>Spring / summer 2023</h3>
-        </div>
-        <div class="banner-box banner-box3">
-            <h2>T-SHIRTS</h2>
-            <h3>New Trendy Prints</h3>
-        </div>
+    <section id="pagination" class=section-p1>
+        <a href="#">1</a>
+        <a href="#">2</a>
+        <a href="#"><i class="fa fa-arrow-right" aria-hidden="true"></i>
+        </a>
     </section>
 
     <section id="newsletter" class="section-p1" class="section-m1">
@@ -398,6 +332,7 @@
             <button class="normal">Sign Up</button>
         </div>
     </section>
+
     <footer class="section-p1">
         <div class="col">
             <img class="logo" src="img/logo.png" alt="">
